added styling, changed list slightly

--- a/HTMLAssessment.html
+++ b/HTMLAssessment.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Sports! Sports!! SPORTS!!!</title>
   </head>
   <body>
@@ -35,6 +36,7 @@
         <th rowspan="2">Team Name</th>
         <th colspan="2">First Half</th>
         <th colspan="2">Second Half</th>
+        <th rowspan="2">Total Score</th>
       </tr>
       <tr>
         <th>Q1</th>
@@ -42,6 +44,25 @@
         <th>Q3</th>
         <th>Q4</th>
       </tr>
+      <tr class="scores">
+        <td>East Westers</td>
+        <td>7</td>
+        <td>3</td>
+        <td>0</td>
+        <td>7</td>
+        <td><b>17</b></td>
+      </tr>
+      <tr class="scores">
+        <td>West Easters</td>
+        <td>3</td>
+        <td>3</td>
+        <td>0</td>
+        <td>7</td>
+        <td><b>13</b></td>
+      </tr>
+      <tfoot>
+        <td colspan="6">Scores © Sportsball Sports League, 2017, All Rights Deserved</td>
+      </tfoot>
     </table>
   </body>
 </html>
