added list of positions

--- a/HTMLAssessment.html
+++ b/HTMLAssessment.html
@@ -64,5 +64,32 @@
         <td colspan="6">Scores © Sportsball Sports League, 2017, All Rights Deserved</td>
       </tfoot>
     </table>
+
+    <h2>Player Roster</h2>
+    <ul class="team">
+      <li>East Westers</li>
+        <ol class="position">
+          <li>Captain</li>
+          <li>Square Leg</li>
+          <li>Short Third Man</li>
+          <li>Silly Point</li>
+          <li>Full-Back</li>
+          <li>Scrum Half</li>
+          <li>Loosehead Prop</li>
+        </ol>
+
+      <li>West Easters</li>
+        <ol class="position">
+          <li>Captain</li>
+          <li>Deep Fine Leg</li>
+          <li>Short Third Man</li>
+          <li>Cow Corner</li>
+          <li>Straight Hit</li>
+          <li>Queer Hit</li>
+          <li>Chicken Keeper</li>
+        </ol>
+
+
+    </ul>
   </body>
 </html>
