--- a/HTMLAssessment.html
+++ b/HTMLAssessment.html
@@ -70,26 +70,84 @@
       <li>East Westers</li>
         <ol class="position">
           <li>Captain</li>
+            <ul class="player">
+              <li>D'Marcus Williums</li>
+            </ul>
           <li>Square Leg</li>
+            <ul class="player">
+              <li>T.J. Juckson</li>
+              <li>T'varisuness King</li>
+            </ul>
           <li>Short Third Man</li>
+            <ul class="player">
+              <li>Tyroil Smoochie-Wallace</li>
+              <li>D'Squarius Green, Jr.</li>
+            </ul>
           <li>Silly Point</li>
+            <ul class="player">
+              <li>Ibrahim Moizoos</li>
+              <li>Jackmerius Tacktheritrix</li>
+            </ul>
           <li>Full-Back</li>
+            <ul class="player">
+              <li>D'Isiah T. Billings-Clyde</li>
+              <li>D'Jasper Probincrux III</li>
+              <li>Xmus Jaxon Flaxon-Waxon</li>
+            </ul>
           <li>Scrum Half</li>
+            <ul class="player">
+              <li>Leoz Maxwell Jilliumz</li>
+              <li>Javaris Jamar Javarison-Lamar</li>
+              <li>J'Dinkalage Morgoone</li>
+            </ul>
           <li>Loosehead Prop</li>
+            <ul class="player">
+              <li>Davoin Shower-Handel</li>
+              <li>Hingle McCringleberry</li>
+              <li>L'Carpetron Dookmarriot</li>
+            </ul>
         </ol>
 
       <li>West Easters</li>
         <ol class="position">
           <li>Captain</li>
+            <ul class="player">
+              <li>Saggitariutt Jefferspin</li>
+            </ul>
           <li>Deep Fine Leg</li>
+            <ul class="player">
+              <li>D'Glester Hardunkichud</li>
+              <li>Swirvithan L'Goodling-Splatt</li>
+            </ul>
           <li>Short Third Man</li>
+            <ul class="player">
+              <li>Quatro Quatro</li>
+              <li>Ozamataz Buckshank</li>
+            </ul>
           <li>Cow Corner</li>
+            <ul class="player">
+              <li>Beezer Twelve Washingbeard</li>
+              <li>Shakiraquan T.G.I.F. Carter</li>
+            </ul>
           <li>Straight Hit</li>
+            <ul class="player">
+              <li>X-Wing @Aliciousness</li>
+              <li>Sequester Grundelplith M.D.</li>
+              <li>Scoish Velociraptor Maloish</li>
+            </ul>
           <li>Queer Hit</li>
+            <ul class="player">
+              <li>T.J. A.J. R.J. Backslashinfourth V</li>
+              <li>Eeeee Eeeeeeeee</li>
+              <li>Donkey Teeth</li>
+            </ul>
           <li>Chicken Keeper</li>
+            <ul class="player">
+              <li>Torque (Construction Noise) Lewith</li>
+              <li>The Player Formerly Known as Mousecop</li>
+              <li>Dan Smith</li>
+            </ul>
         </ol>
-
-
     </ul>
   </body>
 </html>
