styled list, lol i am so funnay

--- a/HTMLAssessment.html
+++ b/HTMLAssessment.html
@@ -65,9 +65,10 @@
       </tfoot>
     </table>
 
-    <h2>Player Roster</h2>
+    <h2>Player Rosters</h2>
+    <a href="http://www.soundsonline.com/"><img src="west.gif" alt="East Westers" class="logo">
     <ul class="team">
-      <li>East Westers</li>
+      <li>East Westers</a></li>
         <ol class="position">
           <li>Captain</li>
             <ul class="player">
@@ -107,8 +108,9 @@
               <li>L'Carpetron Dookmarriot</li>
             </ul>
         </ol>
-
-      <li>West Easters</li>
+      <br>
+      <a href="https://en.wikipedia.org/wiki/List_of_dates_for_Easter"><img src="east.png" alt="West Easters" class="logo">
+      <li>West Easters</a></li>
         <ol class="position">
           <li>Captain</li>
             <ul class="player">
