added form, styled a little

--- a/HTMLAssessment.html
+++ b/HTMLAssessment.html
@@ -151,5 +151,67 @@
             </ul>
         </ol>
     </ul>
+
+    <h2>FORM</h2>
+    <fieldset>
+      <legend>Do You Like Sports?</legend>
+      <form>
+        Tell me your sports secrets:
+        <ul class="formList">
+        <li>First name:   <input type="text" name="firstName"></li>
+        <li>Last name:    <input type="text" name="lastName"></li>
+        </ul>
+          <br>
+          Choose Your Favorite Sport: <br>
+          <select name="favSport">
+            <optgroup label="Cool Sports">
+              <option>Bed Racing</option>
+              <option>Clog Cobbing</option>
+              <option>Hairiest Back</option>
+              <option>Ironing</option>
+              <option>Ironing (X-TREME)</option>
+              <option>League of Legends</option>
+              <option>Sporthocking</option>
+              <option>Uppies and Downies</option>
+              <option>Wife Carrying</option>
+            </optgroup>
+            <optgroup label="Nerd Sports">
+              <option>Ballswatting</option>
+              <option>Get The Ball In The Basket</option>
+              <option>Handegg</option>
+              <option>Pucksmacking</option>
+              <option></option>
+            </optgroup>
+          </select> <br>
+          <br>
+          What kind of things have you done with regards to this sport? <br>
+          <input type="checkbox" name="played"> Played <br>
+          <input type="checkbox" name="attended"> Attended <br>
+          <input type="checkbox" name="betOn"> Bet on <br>
+          <input type="checkbox" name="coached"> Coached <br>
+          <input type="checkbox" name="watched"> Watched <br>
+          <input type="checkbox" name="argued"> Argued about <br>
+          <input type="checkbox" name="fought"> Fought about <br>
+          <input type="checkbox" name="rioted"> Rioted about <br>
+          <input type="checkbox" name="killed"> Killed about <br>
+          <input type="checkbox" name="imprisoned"> Went to prison about <br>
+          <br>
+          Which version of this sport do you prefer? <br>
+          <input type="radio" name="version" value="amateur"> Amateur <br>
+          <input type="radio" name="version" value="college"> College <br>
+          <input type="radio" name="version" value="pro"> Professional <br>
+          <input type="radio" name="version" value="semiPro"> Semi-Professional <br>
+          <input type="radio" name="version" value="semiAm"> Semi-Amateur <br>
+          <input type="radio" name="version" value="ProAm"> Professional Amateur <br>
+          <input type="radio" name="version" value="semiAm"> Amateur Professional <br>
+          <br>
+          <input type="submit" name="submit" value="SUBMIT"> <input type="reset" name="reset" value="RESET"><br>
+
+
+
+
+      </form>
+    </fieldset>
+
   </body>
 </html>
