changed roster styling

--- a/HTMLAssessment.html
+++ b/HTMLAssessment.html
@@ -65,92 +65,101 @@
       </tfoot>
     </table>
 
-    <h2>Player Rosters</h2>
-    <ul class="team">
-      <a href="http://www.soundsonline.com/"><img src="west.gif" alt="East Westers" class="logo">
-      <li>East Westers</a></li>
-        <ol class="position">
-          <li>Captain</li>
-            <ul class="player">
-              <li>D'Marcus Williums</li>
-            </ul>
-          <li>Square Leg</li>
-            <ul class="player">
-              <li>T.J. Juckson</li>
-              <li>T'varisuness King</li>
-            </ul>
-          <li>Short Third Man</li>
-            <ul class="player">
-              <li>Tyroil Smoochie-Wallace</li>
-              <li>D'Squarius Green, Jr.</li>
-            </ul>
-          <li>Silly Point</li>
-            <ul class="player">
-              <li>Ibrahim Moizoos</li>
-              <li>Jackmerius Tacktheritrix</li>
-            </ul>
-          <li>Full-Back</li>
-            <ul class="player">
-              <li>D'Isiah T. Billings-Clyde</li>
-              <li>D'Jasper Probincrux III</li>
-              <li>Xmus Jaxon Flaxon-Waxon</li>
-            </ul>
-          <li>Scrum Half</li>
-            <ul class="player">
-              <li>Leoz Maxwell Jilliumz</li>
-              <li>Javaris Jamar Javarison-Lamar</li>
-              <li>J'Dinkalage Morgoone</li>
-            </ul>
-          <li>Loosehead Prop</li>
-            <ul class="player">
-              <li>Davoin Shower-Handel</li>
-              <li>Hingle McCringleberry</li>
-              <li>L'Carpetron Dookmarriot</li>
-            </ul>
-        </ol>
-      <br>
-      <a href="https://en.wikipedia.org/wiki/List_of_dates_for_Easter"><img src="east.png" alt="West Easters" class="logo">
-      <li>West Easters</a></li>
-        <ol class="position">
-          <li>Captain</li>
-            <ul class="player">
-              <li>Saggitariutt Jefferspin</li>
-            </ul>
-          <li>Deep Fine Leg</li>
-            <ul class="player">
-              <li>D'Glester Hardunkichud</li>
-              <li>Swirvithan L'Goodling-Splatt</li>
-            </ul>
-          <li>Short Third Man</li>
-            <ul class="player">
-              <li>Quatro Quatro</li>
-              <li>Ozamataz Buckshank</li>
-            </ul>
-          <li>Cow Corner</li>
-            <ul class="player">
-              <li>Beezer Twelve Washingbeard</li>
-              <li>Shakiraquan T.G.I.F. Carter</li>
-            </ul>
-          <li>Straight Hit</li>
-            <ul class="player">
-              <li>X-Wing @Aliciousness</li>
-              <li>Sequester Grundelplith M.D.</li>
-              <li>Scoish Velociraptor Maloish</li>
-            </ul>
-          <li>Queer Hit</li>
-            <ul class="player">
-              <li>T.J. A.J. R.J. Backslashinfourth V</li>
-              <li>Eeeee Eeeeeeeee</li>
-              <li>Donkey Teeth</li>
-            </ul>
-          <li>Chicken Keeper</li>
-            <ul class="player">
-              <li>Torque (Construction Noise) Lewith</li>
-              <li>The Player Formerly Known as Mousecop</li>
-              <li>Dan Smith</li>
-            </ul>
-        </ol>
-    </ul>
+    <div class="rosterBox">
+      <div class="rosterHeader">
+        <h2>Player Rosters</h2>
+      </div>
+      <div class="roster1">
+      <ul class="team">
+        <a href="http://www.soundsonline.com/"><img src="west.gif" alt="East Westers" class="logo">
+        <li>East Westers</a></li>
+          <ol class="position">
+            <li>Captain</li>
+              <ul class="player">
+                <li>D'Marcus Williums</li>
+              </ul>
+            <li>Square Leg</li>
+              <ul class="player">
+                <li>T.J. Juckson</li>
+                <li>T'varisuness King</li>
+              </ul>
+            <li>Short Third Man</li>
+              <ul class="player">
+                <li>Tyroil Smoochie-Wallace</li>
+                <li>D'Squarius Green, Jr.</li>
+              </ul>
+            <li>Silly Point</li>
+              <ul class="player">
+                <li>Ibrahim Moizoos</li>
+                <li>Jackmerius Tacktheritrix</li>
+              </ul>
+            <li>Full-Back</li>
+              <ul class="player">
+                <li>D'Isiah T. Billings-Clyde</li>
+                <li>D'Jasper Probincrux III</li>
+                <li>Xmus Jaxon Flaxon-Waxon</li>
+              </ul>
+            <li>Scrum Half</li>
+              <ul class="player">
+                <li>Leoz Maxwell Jilliumz</li>
+                <li>Javaris Jamar Javarison-Lamar</li>
+                <li>J'Dinkalage Morgoone</li>
+              </ul>
+            <li>Loosehead Prop</li>
+              <ul class="player">
+                <li>Davoin Shower-Handel</li>
+                <li>Hingle McCringleberry</li>
+                <li>L'Carpetron Dookmarriot</li>
+              </ul>
+          </ol>
+        </div>
+        <div class="roster2">
+          <ul class="team">
+          <a href="https://en.wikipedia.org/wiki/List_of_dates_for_Easter"><img src="east.png" alt="West Easters" class="logo">
+          <li>West Easters</a></li>
+            <ol class="position">
+              <li>Captain</li>
+                <ul class="player">
+                  <li>Saggitariutt Jefferspin</li>
+                </ul>
+              <li>Deep Fine Leg</li>
+                <ul class="player">
+                  <li>D'Glester Hardunkichud</li>
+                  <li>Swirvithan L'Goodling-Splatt</li>
+                </ul>
+              <li>Short Third Man</li>
+                <ul class="player">
+                  <li>Quatro Quatro</li>
+                  <li>Ozamataz Buckshank</li>
+                </ul>
+              <li>Cow Corner</li>
+                <ul class="player">
+                  <li>Beezer Twelve Washingbeard</li>
+                  <li>Shakiraquan T.G.I.F. Carter</li>
+                </ul>
+              <li>Straight Hit</li>
+                <ul class="player">
+                  <li>X-Wing @Aliciousness</li>
+                  <li>Sequester Grundelplith M.D.</li>
+                  <li>Scoish Velociraptor Maloish</li>
+                </ul>
+              <li>Queer Hit</li>
+                <ul class="player">
+                  <li>T.J. A.J. R.J. Backslashinfourth V</li>
+                  <li>Eeeee Eeeeeeeee</li>
+                  <li>Donkey Teeth</li>
+                </ul>
+              <li>Chicken Keeper</li>
+                <ul class="player">
+                  <li>Torque (Construction Noise) Lewith</li>
+                  <li>The Player Formerly Known as Mousecop</li>
+                  <li>Dan Smith</li>
+                </ul>
+            </ol>
+        </ul>
+      </div>
+      <div class="rosterClear"></div>
+    </div>
 
     <h2>FORM</h2>
     <fieldset>
